Made the border align correctly with the bottom of the popup

--- a/css/modern_dark.css
+++ b/css/modern_dark.css
@@ -3,7 +3,7 @@
 	font-family: Mont;
 }
 html {
-	height: 237px;
+	height: 238px;
 	background-color: #212b31;
 	border-style: solid;
 	border-color: #40525e;
