--- a/css/modern_light.css
+++ b/css/modern_light.css
@@ -3,7 +3,7 @@
 	font-family: Mont;
 }
 html {
-	height: 237px;
+	height: 238px;
 	background-color: White;
 	border-style: solid;
 	border-color: Silver;
